# practice-rust-sdl

./: Cargo.toml  notes.txt
src/: animator.rs  components.rs  main.rs  physics.rs
